bug fixed