@@ -18,6 +18,8 @@
         <module>Asteroids</module>
         <module>Collision</module>
         <module>CommonAsteroids</module>
+        <module>Scoring</module>
+
     </modules>
 
     <properties>
@@ -34,34 +36,129 @@
                 <artifactId>javafx-controls</artifactId>
                 <version>21.0.2</version>
             </dependency>
+            <dependency>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-graphics</artifactId>
+                <version>21.0.2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-base</artifactId>
+                <version>21.0.2</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
-
     <build>
         <plugins>
-            <!-- Maven Dependency Plugin to Copy JARs to mods-mvn -->
             <plugin>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.0.2</version>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.2.0</version>
+            </plugin>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <fork>true</fork>
+                </configuration>
+            </plugin>
+            <!-- execute the resulting project -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.6.0</version>
+                <inherited>false</inherited>
                 <executions>
                     <execution>
-                        <id>copy-dependencies</id>
-                        <phase>install</phase> <!-- Ensure it runs at the correct phase -->
                         <goals>
-                            <goal>copy-dependencies</goal>
+                            <goal>exec</goal>
                         </goals>
-                        <configuration>
-                            <!-- Include the JARs of your modules and dependencies -->
-                            <includeGroupIds>dk.sdu.cbse,org.openjfx</includeGroupIds>
-                            <includeArtifactIds>Core,Common,Player,Bullet,CommonBullet,Enemy,Asteroids,Collision,CommonAsteroids,javafx-controls,javafx-graphics,javafx-base</includeArtifactIds>
-                            <!-- Correct the output directory to be the root directory -->
-                            <outputDirectory>${project.parent.basedir}/mods-mvn</outputDirectory> <!-- Correct root-level directory -->
-                            <useRepositoryLayout>false</useRepositoryLayout> <!-- Ensures proper artifact resolution -->
-                        </configuration>
                     </execution>
                 </executions>
+                <configuration>
+                    <executable>${java}</executable>
+                    <workingDirectory>.</workingDirectory>
+                    <longModulepath>false</longModulepath>
+                    <arguments>
+
+                        <argument>-Dorg.lwjgl.util.Debug=true</argument>
+                        <argument>-Djava.library.path=libs</argument>
+                        <argument>--module-path=mods-mvn</argument>
+                        <argument>--class-path=libs/*</argument>
+
+
+                        <argument>--module=Core/dk.sdu.cbse.main.Main</argument>
+                        <argument>--add-modules javafx.graphics</argument>
+                    </arguments>
+                </configuration>
             </plugin>
         </plugins>
     </build>
 
+    <profiles>
+        <profile>
+            <id>parent-project</id>
+            <activation>
+                <file>
+                    <missing>src</missing>
+                </file>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-clean-plugin</artifactId>
+                        <version>3.2.0</version>
+                        <configuration>
+                            <filesets>
+                                <fileset>
+                                    <directory>mods-mvn</directory>
+                                </fileset>
+                                <fileset>
+                                    <directory>libs</directory>
+                                </fileset>
+                            </filesets>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+
+            <id>child-project</id>
+            <activation>
+                <file>
+                    <exists>src</exists>
+                </file>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <version>3.0.2</version>
+                        <executions>
+                            <execution>
+                                <id>copy-installed</id>
+                                <phase>install</phase>
+                                <goals>
+                                    <goal>copy</goal>
+                                </goals>
+                                <configuration>
+                                    <artifactItems>
+                                        <artifactItem>
+                                            <groupId>${project.groupId}</groupId>
+                                            <artifactId>${project.artifactId}</artifactId>
+                                            <version>${project.version}</version>
+                                            <type>jar</type>
+                                        </artifactItem>
+
+                                    </artifactItems>
+                                    <outputDirectory>../mods-mvn</outputDirectory>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
